--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -75,6 +75,7 @@
     "opening": "Opening",
     "closed": "Closed",
     "closing": "Closing",
-    "stopped": "Stopped"
+    "stopped": "Stopped",
+    "unclosed": "Unclosed"
   }
 }
