--- a/src/translations/pt-BR.json
+++ b/src/translations/pt-BR.json
@@ -75,6 +75,7 @@
     "opening": "Abrindo",
     "closed": "Fechado",
     "closing": "Fechando",
-    "stopped": "Parado"
+    "stopped": "Parado",
+    "unclosed": "Nao fechado"
   }
 }
