Add confirmation to Switch chip tap action
- Add confirmation to Switch chip tap action.
- Bump version to v2.4.0.

This prevents accidental actions by requiring user confirmation
before turning off switches.

Resolves #241.

--- a/src/translations/de.json
+++ b/src/translations/de.json
@@ -62,6 +62,7 @@
   },
   "switch": {
     "all_switches": "Alle Schalter",
+    "chip_confirmation": "Warnung: Diese Aktion wird alle Schalter ausschalten. Sind Sie sicher, dass Sie fortfahren möchten?",
     "switches": "Schalter"
   },
   "vacuum": {
